Use ugap only, remove redundant logic