@@ -3,16 +3,16 @@ package algo.ugap.solver.gap3;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import algo.distance_problems.shrink.TailsEnumerator;
-import algo.graph.GenomeException;
-import algo.graph.Graph;
-import algo.graph.Neighbours;
-import algo.guided_problems.GAPGraph;
+import algo.ugap.graph.GenomeException;
+import algo.ugap.graph.Graph;
+import algo.ugap.graph.Neighbours;
+import algo.ugap.graph.GAPGraph;
 import algo.ugap.solver.Detector;
 
 public class GAP3Detector extends Detector {
@@ -21,9 +21,10 @@ public class GAP3Detector extends Detector {
     }
 
     @Override
-    protected Branch search2() {
+    public Branch search2() {
         Branch resultedBranch = new Branch();
         Neighbours neighbours = graph.getBaseGenome().getNeighbours();
+        HashSet<Integer> verticesWithLoops = new HashSet<>();
         for (Iterator<Integer> it = neighbours.getVertices().iterator(); it.hasNext(); ) {
             int vertex = it.next();
             Map<Integer, Long> counts =
@@ -52,18 +53,39 @@ public class GAP3Detector extends Detector {
 
             }
             if (counts.size() == 2) {
-                int target = targetDegree2;
-                int targetTarget = -1;
-                for (Iterator<Integer> iter = neighbours.getVertexNeighbours(target).iterator(); iter.hasNext(); ) {
-                    targetTarget = iter.next();
-//                    targetTarget = it2.next();
-                    if (targetTarget != vertex) {
-                        break;
+                if (targetDegree2 == -1) {
+                    System.out.println(targetDegree1);
+                    System.out.println(targetDegree2);
+                    System.out.println(targetDegree3);
+                    System.out.println("vertex " + vertex);
+                    for (Iterator<Integer> iter = neighbours.getVertexNeighbours(vertex).iterator(); iter
+                            .hasNext(); ) {
+                        System.out.println(iter.next());
                     }
+                    System.out.println(counts);
                 }
-                resultedBranch.merge(
-                        getBranch(Arrays.asList(new Graph.Edge(targetDegree1, targetTarget)), Arrays.asList(new Graph.Edge(vertex, target)), 2)
-                );
+                int targetTarget = -1;
+                if (vertex == targetDegree2) {
+                    if (verticesWithLoops.contains(targetDegree1)) {
+                        resultedBranch.merge(
+                                getBranch(List.of(), Arrays.asList(new Graph.Edge(targetDegree1, vertex)), 2)
+                        );
+                    } else {
+                        verticesWithLoops.add(vertex);
+                    }
+                } else {
+                    for (Iterator<Integer> iter = neighbours.getVertexNeighbours(targetDegree2).iterator(); iter
+                            .hasNext(); ) {
+                        targetTarget = iter.next();
+                        if (targetTarget != vertex) {
+                            break;
+                        }
+                    }
+                    resultedBranch.merge(
+                            getBranch(Arrays.asList(new Graph.Edge(targetDegree1, targetTarget)),
+                                    Arrays.asList(new Graph.Edge(vertex, targetDegree2)), 2)
+                    );
+                }
             }
         }
         return resultedBranch;
